<resources>
    <string name="app_name">Intervals and Scales</string>
    <string name="octa_name">Octatonic Scales</string>
    <string name="hepta_name">Heptatonic Scales</string>
    <string name="hexa_name">Hexatonic Scales</string>
    <string name="pent_name">Octatonic Scales</string>

    <string name="action_pentatonic">Pentatonic Scales</string>
    <string name="action_hexatonic">Hexatonic Scales</string>
    <string name="action_heptatonic">Heptatonic Scales</string>
    <string name="action_octatonic">Octatonic Scales</string>
    <string name="w">W</string>
    <string name="h">H</string>
    <string name="m">m</string>
    <string name="M">M</string>

    <string name="ensimmainen_intervalli">First interval</string>
    <string name="toinen_intervalli">Second interval</string>
    <string name="kolmas_intervalli">Third interval</string>
    <string name="neljas_intervalli">Fourth interval</string>
    <string name="viides_intervalli">Fifth interval</string>
    <string name="kuudes_intervalli">Sixth interval</string>
    <string name="seventh_intervalli">Seventh interval</string>
    <string name="back_to_main_view">Back to Main View</string>
    <string name="pentatonic_scales">Pentatonic Scales</string>
    <string name="hexatonic_scales">Hexatonic Scales</string>
    <string name="heptatonic_scales">Heptatonic Scales</string>
    <string name="octatonic_scales">Octatonic Scales</string>
    <string name="show_scales">Show Scales</string>
    <string name="clear_intervals">Clear Intervals</string>

    <string name="show_data">Info on Application</string>
    <string name="textView1">TextView</string>
    <string name="textView2">TextView</string>
    <string name="textView3">TextView</string>
    <string name="textView4">TextView</string>
    <string name="octatonic_name">Octatonic Scales</string>
    <string name="dataView_name">Information on Appplication</string>

    <string name="show_scales_heptatonic">Heptatonic Scales</string>
    <string name="show_scales_ocatonic">Octatonic Scales</string>
    <string name="heptatonic_name">Heptatonic Scales</string>
    <string name="show_scales_pentatatonic">Pentatonic Scales</string>
    <string name="show_scales_hexatonic">Hexatonic Scales</string>
    <string name="hexatonic_name">Hexatonic Scales</string>
    <string name="pentatonic_name">Pentatonic Scales</string>
    <string name="scales">Single Scale</string>
</resources>
